# massiveedit

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: architecture.md  changelog.html  download.html  index.html  lang.js  privacy.html
docs/en/: changelog.html  download.html  index.html  privacy.html
include/massiveedit/core/: document_session.h  line_indexer.h  piece_table.h  search_engine.h  search_thread_pool.h
include/massiveedit/core/file/: chunk_cache.h  large_file_backend.h
include/massiveedit/ui/: i18n.h  large_file_view.h  main_window.h
resources/icons/: AppIcon.icns
scripts/: build_and_run.bat  build_and_run.sh  build_and_run_linux.sh  generate_macos_icns.sh  make_xcode_project.sh  package_linux.sh  package_macos.sh  package_windows.bat  run_windows.bat
scripts/installer/: massiveedit.nsi
src/: CMakeLists.txt  Info.plist.in  MassiveEdit.entitlements.in  app_icon.rc  main.cpp  resources.qrc
src/cmake/: DeployQtMac.cmake.in
src/core/: document_session.cpp  line_indexer.cpp  piece_table.cpp  search_engine.cpp  search_thread_pool.cpp
src/core/file/: chunk_cache.cpp  large_file_backend.cpp
src/ui/: i18n.cpp  large_file_view.cpp  main_window.cpp
tests/: CMakeLists.txt  document_session_offset_test.cpp  document_session_operation_log_test.cpp  document_session_replace_test.cpp  large_file_view_delete_behavior_test.cpp  line_indexer_offset_test.cpp  piece_table_smoke_test.cpp  piece_table_streaming_test.cpp
